--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body {
 .apresentacao__texto-e-botoes__botoes {
     display: flex;
     justify-content: space-between;
+    gap: 20px;
 }
 
 .apresentacao__texto-e-botoes__botoes_botao {
